# Travel-Agent-Planner

./: .env  README.md  app.py  crew.py  pyproject.toml  requirements.txt
outputs/: activities_itinerary.md  flight_recommendations.md  hotel_recommendations.md  travel_metrics.json
src/travel_planner_ai/: __init__.py  app.py  config.py  crew.py  main.py
src/travel_planner_ai/agents/: __init__.py  travel_agents.py
src/travel_planner_ai/guardrails/: __init__.py  content_validator.py
src/travel_planner_ai/tasks/: __init__.py  travel_tasks.py
src/travel_planner_ai/tools/: __init__.py  search_tools.py
